// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders a full Container component 1`] = `
<Container
  full={true}
  fullVertical={false}
  small={false}
>
  <styled.div
    full={true}
    fullVertical={false}
    small={false}
  >
    <div
      className="sc-AykKC eeYOZP"
    >
      Full Container
    </div>
  </styled.div>
</Container>
`;

exports[`Container renders a full vertical Container component 1`] = `
<Container
  full={false}
  fullVertical={true}
  small={false}
>
  <styled.div
    full={false}
    fullVertical={true}
    small={false}
  >
    <div
      className="sc-AykKC cGmkpR"
    >
      Full Vertical Container
    </div>
  </styled.div>
</Container>
`;

exports[`Container renders a small Container component 1`] = `
<Container
  full={false}
  fullVertical={false}
  small={true}
>
  <styled.div
    full={false}
    fullVertical={false}
    small={true}
  >
    <div
      className="sc-AykKC iuZucl"
    >
      Hello Small Container
    </div>
  </styled.div>
</Container>
`;

exports[`Container should render without crashing with just a child passed 1`] = `
<Container
  full={false}
  fullVertical={false}
  small={false}
>
  <styled.div
    full={false}
    fullVertical={false}
    small={false}
  >
    <div
      className="sc-AykKC hNUvFz"
    >
      Hello Span
    </div>
  </styled.div>
</Container>
`;
